# Algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Taskfile.yml
.github/workflows/: build.yml  misc.yml  patterns.yml
Algorithms/: main.cpp  pch.hpp
Algorithms/crypto/: md5.c
Algorithms/garbage/: Feature20.cpp  boost_serialization.cpp  garbage.hpp  numeral_system_converter.cpp  templates.hpp
Algorithms/garbage/OpenGL-FreeGlut-Test/: main.c
Algorithms/garbage/__oth/: Feature20.cpp  boost-serialization.cpp  templates.hpp
Algorithms/garbage/box2d-sfml-tests/: main.cpp
Algorithms/garbage/communicator/Chatterer_Client/: Chatterer_Client.csproj  Program.cs
Algorithms/garbage/communicator/Chatterer_Client/Properties/: AssemblyInfo.cs
Algorithms/garbage/communicator/Chatterer_Server/: Certificate.cs  Chatterer_Server.csproj  Client.cs  Program.cs  Server.cs
Algorithms/garbage/communicator/Chatterer_Server/Properties/: AssemblyInfo.cs
Algorithms/garbage/graph-theory/: DFS-BFS.cpp  Dijkstra-FloydWarshall.cpp  Kraskal-Prim.cpp
Algorithms/garbage/graph_theory/: DFS&BFS.cpp  Dijkstra&FloydWarshall.cpp  Kraskal&Prim.cpp
Algorithms/garbage/re asm/tailcall/: main.cpp  readme.md
Algorithms/garbage/re-asm/tailcall/: main_x32.objectfile  main_x32_O2.objectfile  main_x64.objectfile  main_x64_O2.objectfile
Algorithms/garbage/sfml/shape-fun/: Circle.cpp  Circle.hpp  RandomF.cpp  RandomF.hpp  Shape.hpp  Square.cpp  Square.hpp  demo1.cpp  demo2.cpp  pch.hpp
Algorithms/garbage/sfml_big_bang/: Circle.cpp  Circle.hpp  RandomF.cpp  RandomF.hpp  Shape.hpp  Square.cpp  Square.hpp  main.cpp
Algorithms/garbage/sfml_blinking_figure/: Circle.cpp  Circle.hpp  RandomF.cpp  RandomF.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp  main.cpp
Algorithms/garbage/sorting/: Bubble&Coctail&EvenOddSort&Combo.cpp  Bubble_Coctail_EvenOddSort_Combo.cpp  Insert&Selection&Merge.cpp  Insert_Selection_Merge.cpp  Shell&Quick.cpp  Shell-Quick.cpp  Shell_Quick.cpp
Algorithms/patterns/: Builder.cpp  Builder.hpp  FactoryMethod.cpp  Prototype.hpp  Singleton.hpp
Algorithms/patterns/behavioral/: CoR.cpp  CoR.hpp  Command.cpp  Command.hpp  Iterator.hpp  Mediator.cpp  Mediator.hpp  Memento.cpp  Memento.hpp  Observer.cpp  Observer.hpp  State.cpp  State.hpp  Strategy.cpp  Strategy.hpp  TemplateMethod.cpp  TemplateMethod.hpp  Visitor.cpp  Visitor.hpp
Algorithms/patterns/creational/: AbstractFactory.cpp  AbstractFactory.hpp  Builder.cpp  Builder.hpp  FactoryMethod.cpp  FactoryMethod.hpp  Prototype.cpp  Prototype.hpp  Singleton.hpp
Algorithms/patterns/structural/: Adapter.cpp  Adapter.hpp  Bridge.cpp  Bridge.hpp  Composite.cpp  Composite.hpp  Decorator.cpp  Decorator.hpp  Facade.cpp  Facade.hpp  Flyweight.cpp  Flyweight.hpp  Proxy.cpp  Proxy.hpp
Algorithms/stl_rework/: Deque.hpp  LinkedList.hpp  Map.hpp  Queue.hpp  Set.hpp  Stack.hpp  Vector.hpp
OpenGL-FreeGlut-Test/: main.c
entry/: main.cpp  pch.hpp
include/algorithms/: stuff.hpp
include/algorithms/misc/: numeral-system-converter.hpp  sorting.hpp  templates.hpp
include/algorithms/patterns/behavioral/: command.hpp  cor.hpp  iterator.hpp  mediator.hpp  memento.hpp  observer.hpp  state.hpp  strategy.hpp  template-method.hpp  visitor.hpp
include/algorithms/patterns/creational/: abstract-factory.hpp  builder.hpp  factory-method.hpp  prototype.hpp  singleton.hpp
include/algorithms/patterns/structural/: adapter.hpp  bridge.hpp  composite.hpp  decorator.hpp  facade.hpp  flyweight.hpp  proxy.hpp
misc/: tailcall.md
src/: main-crypto.c  main-garbage.cpp  main-old.cpp  main-patterns.cpp  main-sfml.cpp  main-templates.cpp  pch.hpp
src/misc/: numeral-system-converter.cpp
src/patterns/behavioral/: command.cpp  cor.cpp  mediator.cpp  memento.cpp  observer.cpp  state.cpp  strategy.cpp  template-method.cpp  visitor.cpp
src/patterns/creational/: abstract-factory.cpp  builder.cpp  factory-method.cpp  prototype.cpp
src/patterns/structural/: adapter.cpp  bridge.cpp  composite.cpp  decorator.cpp  facade.cpp  flyweight.cpp  proxy.cpp
stl_rework/: DoublyLinkedList.hpp  LinkedList.hpp  Map.hpp  Multiset.hpp  Set.hpp  Vector.hpp
tests/misc/: tests-misc.cpp  tests_misc.cpp
tests/patterns/: tests-structural.cpp  tests_behavioral.cpp  tests_creational.cpp  tests_structural.cpp
